--- a/asn1/part2/composer.json
+++ b/asn1/part2/composer.json
@@ -1,5 +1,26 @@
 {
+    "name": "Assgn1Part2",
+    "description": "Assignment1 Part2 unit testing part1",
+    "authors": [
+        {
+            "name": "Trisha Smith",
+            "email": "trismi@gmail.com"
+        }
+    ],
+    "require": {
+        "phpunit/phpunit": "3.7.*@dev"
+    },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*"
+        "monolog/monolog": "1.2.1"
+    },
+    "autoload": {
+        "classmap": [
+            "Src/",
+            "Tests/"
+        ]
+    },
+    "config": {
+        "vendor-dir" : "vendor",
+        "vendor-bin" : "vendor/bin"
     }
 }
