--- a/final/composer.json
+++ b/final/composer.json
@@ -14,8 +14,7 @@
     "autoload": {
         "classmap": [
             "src/",
-            "src2/",
-            "tests/"
+            "src2/"
         ]
     },
     "config": {
